Atualizei e Criei outra pasta para as fontes.

--- a/FETECH.html
+++ b/FETECH.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FETECH - Curiosidades de Tecnologia</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="desafio.css">
+    <link rel="stylesheet" href="./Estilos/FETECH.css">
 </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
                 </p>
             </article>
             <picture class="imagens">
-                <source media="(max-width:830px)" srcset="../pacote-projeto-d010/imagens/droid-p.png">
+                <source media="(max-width:830px)" srcset="../imagens/droid-p.png">
                 <img src="imagens/droid-g.png" alt="Imagem dos androids">
             </picture>
             <aside>Essa primeira versão bizarra foi batizada em homenagem ao seu criador: seriam os Dandroids.</aside>
