--- a/FETECH.html
+++ b/FETECH.html
@@ -25,7 +25,7 @@
         </section>
         <section>
             <article>
-                <h2 id="segtitulo" style="font-family: fontetitulo;">A Primeira Versão</h2>
+                <h2 id="segtitulo" style="font-family: android;">A Primeira Versão</h2>
                 <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
                 </p>
             </article>
