Mudei uma linha

--- a/FETECH.html
+++ b/FETECH.html
@@ -38,7 +38,7 @@
         <section>
             <h2 id="tertítulo">Surge um novo mascote</h2>
             <p>
-                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank">Irina Blok</a>, também funcionária do <strong>Google</strong>, ficou com a missão de representar o pequeno robozinho de uma maneira mais agradável.
+                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank">Irina Blok</a>, também funcionária do <strong>Google</strong>, ficou com a missão de representar o pequeno robozinho de uma maneira bem mais agradável.
             </p>
             <picture class="imagens">
                 <source media="(max-width:830px)" srcset="imagens/irina-p.jpg">
